fix: left margin for list on mobile

--- a/src/components/__common__/two-columns/TwoColumns.module.scss
+++ b/src/components/__common__/two-columns/TwoColumns.module.scss
@@ -19,6 +19,10 @@
 .categoriesList {
   margin-left: 1.5rem;
   padding: 24px 0;
+
+  @media (max-width: 350px) {
+    margin-left: 0.2rem;
+  }
 }
 
 @media (max-width: 820px) {
